# ardupilot

ArduPlane/: mav_2_1.parm
Tools/autotest/: dk_agent_plane.py  geolocation.py  launch_arduplane.sh  main orig.py  main.py  mav_2_1.parm  rotations.py  seek.py
Tools/autotest/dubins/dubins-main/: pyproject.toml  requirements.txt  setup.py
Tools/autotest/search-and-track/: README.md  requirements.txt
Tools/autotest/search-and-track/resources/dubins/: pyproject.toml  setup.py
Tools/autotest/search-and-track/resources/dubins/dubins/: dubins.c
Tools/autotest/search-and-track/src/: agent.py  belief.py  dubins_utils.py  nai.py  run.py  utils.py
Tools/autotest/search-and-track/src/etc/: default.toml
