[build-system]
requires = ["setuptools", "wheel", "Cython ~= 0.29.36"]

[project]
name         = "dubins"
version      = "1.0.1"
description  = "Code to generate and manipulate dubins curves"
authors      = [{name="Andrew Walker", email="walker.ab@gmail.com"}]
license      = {text="MIT"}
classifiers  = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Mathematics"
]

